Improve naming consistency and fix tests

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -221,11 +221,12 @@ en:
               followers: "Publish Post #%{post_number} and deliver it to the followers of the Group Actors."
               no_followers: "Publish Post #%{post_number} without delivering it. The Group Actors have no followers to deliver to."
               topic_not_published: "Publishing is disabled for Post #%{post_number}. Topic #%{topic_id} is not published."
+              post_is_scheduled: "Publishing is disabled for Post #%{post_number}. Post #%{post_number} is scheduled to be published."
           deliver:
             label: "Deliver Post #%{post_number}"
             description:
               followers: "Deliver Post #%{post_number} to the followers of the Group Actors."
-              no_followers: "Delivery is disabled for Post #%{post_number}. The Group Actors no followers to deliver to."
+              no_followers: "Delivery is disabled for Post #%{post_number}. The Group Actors have no followers to deliver to."
               topic_not_delivered: "Delivery is disabled for Post #%{post_number}. Topic #%{topic_id} has not been delivered."
               delivered: "Post #%{post_number} was just delivered to the followers of the Group Actors."
           schedule:
