--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -81,9 +81,17 @@ en:
   js:   
     discourse_activity_pub:
       about:
-        label: ActivityPub
-        title: About ActivityPub on this forum
-        actors: Our Actors
+        navigation:
+          label: Federation
+          title: About Federation on this forum
+        title: Federation
+        description: These categories and tags support ActivityPub Federation. If you use Mastodon or other ActivityPub platforms you can follow them to see their topics and posts in your feed.
+        categories: Categories
+        tags: Tags
+        actor:
+          follower_count:
+            one: "%{count} follower"
+            other: "%{count} followers"
       status:
         title:
           publishing_disabled: ActivityPub publishing is disabled by the login required site setting. Incoming activities and outgoing follows are enabled.
